Fixed issue where card "language" would overflow to next line on mobile devices

--- a/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
+++ b/src/components/Page/PageBody/Work/ProjectCard/ProjectCard.scss
@@ -200,7 +200,6 @@ img {
 
   .card-title {
     font-size: 135%;
-    width: 75%;
   }
   .card-date {
     font-size: 2.7vw;
